// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Toolbar instance with center justification 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={2}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "18px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          className="ui-toolbar-element"
          contentEditable={false}
          direction="right"
          disabled={false}
          errorMessage=""
          focus={false}
          height=""
          iconName="car"
          iconStyle=""
          id=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Button"
          onClick={[Function]}
          padding=""
          selected={false}
          sizing="small"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of a Toolbar instance with left justification 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={0}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "18px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          className="ui-toolbar-element"
          contentEditable={false}
          direction="right"
          disabled={false}
          errorMessage=""
          focus={false}
          height=""
          iconName="car"
          iconStyle=""
          id=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Button"
          onClick={[Function]}
          padding=""
          selected={false}
          sizing="small"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of a Toolbar instance with right justification 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={1}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "18px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          className="ui-toolbar-element"
          contentEditable={false}
          direction="right"
          disabled={false}
          errorMessage=""
          focus={false}
          height=""
          iconName="car"
          iconStyle=""
          id=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Button"
          onClick={[Function]}
          padding=""
          selected={false}
          sizing="small"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test disabling of a Toolbar instance 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={0}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "24px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          className="ui-toolbar-element"
          contentEditable={false}
          direction="right"
          disabled={true}
          errorMessage=""
          focus={false}
          height=""
          iconName="car"
          iconStyle=""
          id=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Button"
          onClick={[Function]}
          padding=""
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test making the Toolbar invisible 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-toolbar"
  >
    <styled.div
      className="ui-toolbar-group"
      justify={0}
    >
      <styled.div
        key="0"
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "display": "flex",
            "height": "24px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          className="ui-toolbar-element"
          contentEditable={false}
          direction="right"
          disabled={false}
          errorMessage=""
          focus={false}
          height=""
          iconName="car"
          iconStyle=""
          id=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Button"
          onClick={[Function]}
          padding=""
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={false}
          width=""
          xcss={null}
        />
      </styled.div>
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test retrieval of Toolbar props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "id": "",
  "justify": 0,
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Toolbar",
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
